force-app/main/default/objects/GroupClass_Assignment__c/GroupClass_Assignment__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Group / Class Assignment</label>
    <nameField>
        <displayFormat>GroupClassAssign-{0000}</displayFormat>
        <label>Group-Class Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group / Class Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>