force-app/main/default/objects/GroupClass_Assignment__c/fields/Assignment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Summary__c</fullName>
    <formula>text( Start_Date__c ) &amp; &quot;, &quot; &amp; text(Group_Class__r.Group_Class_Name__c)  &amp; br() &amp; &quot;Location: &quot; &amp; text( Group_Class__r.Location__c )  &amp; &quot;, &quot; &amp; &quot;Time: &quot; &amp; text( Group_Class__r.Time__c)  &amp; br() &amp; &quot;Staff: &quot; &amp; Group_Class__r.Staff_Trainer__r.Full_Name__c &amp; br() &amp; &quot;-------------------------------&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Summary</label>
    <type>Text</type>
</CustomField>