force-app/main/default/objects/GroupClass_Assignment__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Partially attended</fullName>
            </value>
            <value>
                <fullName>NCNS for Workshop</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Registration Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>