force-app/main/default/objects/GroupClass_Assignment__c/fields/Attendance_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Exception_Reason__c</fullName>
    <label>Attendance Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Attendance__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Court Date</fullName>
            </value>
            <value>
                <fullName>Did not leave a reason</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s Appointment</fullName>
            </value>
            <value>
                <fullName>Employment Appointment</fullName>
            </value>
            <value>
                <fullName>Family Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>