force-app/main/default/objects/GroupClass_Assignment__c/fields/Attended_After_Program_Start__c.field-meta.xml
<CustomField>
    <fullName>Attended_After_Program_Start__c</fullName>
    <formula>if (Start_Date__c &gt;=  Case_Record__r.Program_Start_Date__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended After Program Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>