force-app/main/default/objects/GroupClass_Assignment__c/fields/Cara_Day_Attendance_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Cara_Day_Attendance_Expectation__c</fullName>
    <inlineHelpText>Added for Cara In-Person Days beginning 10/19/21.</inlineHelpText>
    <label>Cara Day Attendance Expectation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Only</fullName>
            </value>
            <value>
                <fullName>Training + Lab</fullName>
            </value>
            <value>
                <fullName>Training + Lab + Orientation</fullName>
            </value>
            <value>
                <fullName>Requested based on Hold/Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>