force-app/main/default/objects/GroupClass_Assignment__c/fields/Case_Participation__c.field-meta.xml
<CustomField>
    <fullName>Case_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Participation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Participation__c.Is_Main_Client__c</field>
            <operation>equals</operation>
            <value>&apos;No&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Participation__c</referenceTo>
    <relationshipLabel>Group / Class Assignments</relationshipLabel>
    <relationshipName>Group_Class_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>