force-app/main/default/objects/GroupClass_Assignment__c/fields/Case_Participation_Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Participation_Participant_Id__c</fullName>
    <formula>Case_Participation__r.Participant__c</formula>
    <label>Case Participation Participant Id</label>
    <type>Text</type>
</CustomField>