force-app/main/default/objects/GroupClass_Assignment__c/fields/Case_Record_Main_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Main_Client_Id__c</fullName>
    <description>The enrolled client associated with the case record.</description>
    <formula>Case_Record__r.Main_Client__c</formula>
    <inlineHelpText>The enrolled client associated with the case record.</inlineHelpText>
    <label>Case Record Main Client Id</label>
    <type>Text</type>
</CustomField>