force-app/main/default/objects/GroupClass_Assignment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Group_Class_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>