force-app/main/default/objects/GroupClass_Assignment__c/fields/Client_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Household_ID__c</fullName>
    <description>Used by ECM Triggers to group assignments by household to count stats.</description>
    <formula>IF( NOT(ISBLANK(Case_Record__c)), Case_Record__r.Client_Household__r.Id,
    IF(NOT(ISBLANK(Case_Participation__c)),  Case_Participation__r.Client_Household_ID__c,
        IF(NOT(ISBLANK(Client__c)),  Client__r.Client_Household__r.Id, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Household ID</label>
    <type>Text</type>
</CustomField>