force-app/main/default/objects/GroupClass_Assignment__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <formula>Client__c</formula>
    <label>Client Id</label>
    <type>Text</type>
</CustomField>