force-app/main/default/objects/GroupClass_Assignment__c/fields/Connects_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Connects_Attendance__c</fullName>
    <label>Connects Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended, Traction Achieved</fullName>
            </value>
            <value>
                <fullName>Attended, Follow Up</fullName>
            </value>
            <value>
                <fullName>Partially Attended, Follow Up</fullName>
            </value>
            <value>
                <fullName>Partially Attended, Opted Out</fullName>
            </value>
            <value>
                <fullName>Scheduled, No Show</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>