force-app/main/default/objects/GroupClass_Assignment__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>Used by ECM Triggers to group assignments by Contact.</description>
    <formula>IF( NOT(ISBLANK(Case_Record__c)), Case_Record__r.Main_Client__r.Id, 
IF(NOT(ISBLANK(Case_Participation__c)), Case_Participation__r.Participant__r.Id, 
IF(NOT(ISBLANK(Client__c)), Client__r.Id, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>