force-app/main/default/objects/GroupClass_Assignment__c/fields/Direct_Service__c.field-meta.xml
<CustomField>
    <fullName>Direct_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Service</label>
    <referenceTo>Direct_Service__c</referenceTo>
    <relationshipLabel>Group / Class Assignments</relationshipLabel>
    <relationshipName>Group_Class_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>