force-app/main/default/objects/GroupClass_Assignment__c/fields/ExpUnique__c.field-meta.xml
<CustomField>
    <fullName>ExpUnique__c</fullName>
    <description>Group_Class__c + (Case_Record__r.Main_Client__c OR Case_Participation__r.Participant__c OR Client__c)</description>
    <externalId>true</externalId>
    <label>ExpUnique</label>
    <length>40</length>
    <type>Text</type>
</CustomField>