force-app/main/default/objects/GroupClass_Assignment__c/fields/Group_Class_Location__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Location__c</fullName>
    <formula>text(Group_Class__r.Location__c)</formula>
    <label>Group/Class Location</label>
    <type>Text</type>
</CustomField>