force-app/main/default/objects/GroupClass_Assignment__c/fields/Group_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Name__c</fullName>
    <formula>text(Group_Class__r.Group_Class_Name__c)</formula>
    <label>Group/Class Name</label>
    <type>Text</type>
</CustomField>