force-app/main/default/objects/GroupClass_Assignment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF(TEXT(Status__c)&lt;&gt;&apos;Inactive&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Text</type>
</CustomField>