force-app/main/default/objects/GroupClass_Assignment__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <formula>IF(CONTAINS(TEXT(Status__c), &apos;Complete&apos;) ||  CONTAINS(TEXT(Group_Class__r.Status__c), &apos;Complete&apos;) , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsComplete</label>
    <type>Text</type>
</CustomField>