force-app/main/default/objects/GroupClass_Assignment__c/fields/Missed_Assignment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Missed_Assignment_Summary__c</fullName>
    <formula>text( Start_Date__c ) &amp; &quot;, &quot; &amp; text(Group_Class__r.Group_Class_Name__c) &amp; br() &amp; &quot;Location: &quot; &amp; text( Group_Class__r.Location__c ) &amp; &quot;, &quot; &amp; &quot;Time: &quot; &amp; text( Group_Class__r.Time__c) &amp; br() &amp; &quot;Attendance: &quot; &amp;  text(Attendance__c) &amp; br() &amp; &quot;-------------------------------&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Assignment Summary</label>
    <type>Text</type>
</CustomField>