force-app/main/default/objects/GroupClass_Assignment__c/fields/Related_to_Organization__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Organization__c</fullName>
    <formula>Group_Class__r.Related_to_Organization__r.Name</formula>
    <label>Related to Organization</label>
    <type>Text</type>
</CustomField>