force-app/main/default/objects/GroupClass_Assignment__c/fields/Staff_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Staff_Trainer__c</fullName>
    <formula>Group_Class__r.Staff_Trainer__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Trainer</label>
    <type>Text</type>
</CustomField>