force-app/main/default/objects/GroupClass_Assignment__c/fields/Video_Summary__c.field-meta.xml
<CustomField>
    <fullName>Video_Summary__c</fullName>
    <formula>text(Group_Class__r.Group_Class_Name__c) &amp; &quot;, &quot; &amp; &quot;Staff: &quot; &amp; Group_Class__r.Staff_Trainer__r.Full_Name__c &amp; br() &amp; &quot;-------------------------------&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video Summary</label>
    <type>Text</type>
</CustomField>