force-app/main/default/objects/GroupClass_Assignment__c/recordTypes/Group_Class_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Group_Class_Assignment</fullName>
    <active>true</active>
    <label>Group/Class Assignment</label>
</RecordType>