force-app/main/default/objects/GroupClass_Assignment__c/recordTypes/Orientation_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Orientation_Assignment</fullName>
    <active>true</active>
    <label>Orientation Assignment</label>
</RecordType>