force-app/main/default/objects/GroupClass_Assignment__c/validationRules/Connects_Attendance.validationRule-meta.xml
<ValidationRule>
    <fullName>Connects_Attendance</fullName>
    <active>true</active>
    <errorConditionFormula>Group_Class_Name__c = &quot;Connects Onboarding&quot;

&amp;&amp;

ischanged(Attendance__c)</errorConditionFormula>
    <errorMessage>Onboarding attendance should be tracked in the &quot;Connects Attendance&quot; field.</errorMessage>
</ValidationRule>