force-app/main/default/objects/GroupClass_Assignment__c/validationRules/Workshop_Attendance.validationRule-meta.xml
<ValidationRule>
    <fullName>Workshop_Attendance</fullName>
    <active>true</active>
    <errorConditionFormula>Group_Class_Name__c  &lt;&gt; &quot;Connects Onboarding&quot;

&amp;&amp;

ischanged(Connects_Attendance__c )</errorConditionFormula>
    <errorMessage>Please use the &quot;Attendance Exception&quot; field to track attendance-related data.</errorMessage>
</ValidationRule>